fix: z-index

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    z-index: 3;
+    z-index: 2;
 
     .button {
         padding-right: .5rem;
@@ -82,7 +82,7 @@ nav {
     top: 0;
     left: 0;
     /* z-index messi per eccesso di sicurezza, in teoria funzionavano anche senza */
-    z-index: 1;
+    z-index: 3;
     background-color: black;
 
     .logo {
@@ -358,7 +358,7 @@ footer {
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 4;
     background-color: var(--background-bottom-bar);
     display: flex;
     justify-content: space-between;
@@ -440,6 +440,7 @@ footer {
         .volume {
             display: flex;
             gap: .5rem;
+            
         }
     }
     /* #endregion centro */
